# bdd-agentic-coding

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.claude/skills/brainstorming-from-bdd/: SKILL.md
.claude/skills/writing-bdd-scenarios/: EXAMPLE-SESSION.md  SKILL.md
.github/workflows/: bdd.yml
docs/decisions-log/: 1746576000-login-token-and-profile.md  1778150241-inventory-management.md  1778160807-user-registration.md
docs/superpowers/plans/: 2026-05-06-bdd-experiment-setup.md  2026-05-07-login-token-and-profile.md  2026-05-07-user-registration.md  2026-05-07-writing-bdd-scenarios-skill.md  2026-05-09-fix-mypy-errors.md
docs/superpowers/specs/: 2026-05-06-bdd-experiment-design.md  2026-05-07-login-token-and-profile-design.md  2026-05-07-user-registration-design.md  2026-05-07-writing-bdd-scenarios-skill-design.md
e2e/: Makefile  pyproject.toml
services/inventory/: AGENTS.md  Makefile  pyproject.toml
services/orders/: AGENTS.md  Makefile  pyproject.toml
services/users/: AGENTS.md  Makefile  pyproject.toml
services/users/features/: environment.py  login.feature  profile.feature  registration.feature
services/users/features/steps/: login_steps.py  profile_steps.py  registration_steps.py
services/users/src/users/: main.py  routes.py  service.py  store.py  token_store.py
shared/: pyproject.toml
shared/src/shared/: client.py  environment.py
