[project]
name = "bdd-experiment"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["services/*", "e2e", "shared"]

[dependency-groups]
dev = ["ruff", "mypy", "shared"]

[tool.uv.sources]
shared = { workspace = true }

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
