[project]
name = "e2e"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["fastapi", "uvicorn[standard]", "behave", "httpx", "shared"]

[tool.uv.sources]
shared = { workspace = true }

[tool.behave]
paths = ["features"]

[tool.hatch.build.targets.wheel]
packages = ["e2e"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
